opensource/zipkin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-deployment
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
#        args: 
#        - "--STORAGE_TYPE=cassandra3"
#        - "--CASSANDRA_CONTACT_POINTS=cassandra-service:9042"
#          https://github.com/openzipkin/zipkin/issues/3412 cassandra schema가 하나 누락된 것 같음
#        - "--ES_USERNAME=bluesky"
#        - "--ES_PASSWORD=bluesky"
#        volumeMounts:
#        - name: zipkin-data
#          mountPath: /data
#      volumes:
#      - name: zipkin-data
#        persistentVolumeClaim:
#          claimName: zipkin-data-pvc
