opensource/zipkin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
spec:
  selector:
    app: zipkin
  ports:
  - protocol: TCP
    name: zipkin-port
    port: 9411
    targetPort: 9411
