opensource/zipkin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
spec:
  rules:
  - host: zipkin.bluesky.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipkin-service
            port:
              number: 9411
